# traction-control-sw

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  STM32-for-VSCode.config.yaml  STM32Make.make  benchmark.py  log.dbg
.cache/clangd/index/: Regen.c.0389D4B30DF1E072.idx  Regen.h.383E7C6B52EB4B9D.idx  SLIP.c.72F2D4DD689A0C6B.idx  SLIP.h.C349927104F6794C.idx  SlipV1.c.DD653503142FC91F.idx  SlipV1.h.9E2A943C7DE9521F.idx  SlipV1_data.c.09494AB5C3441F1C.idx  TV.c.5F0CADFDBA0B4BC1.idx  TV.h.C91545E763B9CAF0.idx  Torque.c.637D8CCB81E10813.idx  Torque.h.D3D7F3A457C5371B.idx  Torque_data.c.8EDC2CE5ADDBFCA7.idx  benchmark.c.2911A9A95F064239.idx  benchmark.h.D36AAAF155CCBE5D.idx  bms_network.c.1A6021614715C9FC.idx  bms_network.h.7BC5D6B28CC3BEE1.idx  bms_utils_c.c.5800213EAAFEB45B.idx  bms_utils_c.h.57CF4396CCB92290.idx  bms_watchdog.c.6FB952A8F91D246F.idx  bms_watchdog.h.0EBD480D734C67BD.idx  can.c.D7791F60ACFAD035.idx  can.h.483CB77D2853C7EC.idx  can_messages.c.DA5EFB3567D0D88A.idx  can_messages.h.A5675F62C3867F04.idx  data.h.83F82A72A463B092.idx  defines.h.260A3397BD955F92.idx  hv_current_network.c.F84BE99C179DDCCF.idx  hv_current_network.h.9063293A18E9CCDB.idx  hv_current_utils_c.c.D73AE281BA927E78.idx  hv_current_utils_c.h.57732B0CCCFFE78C.idx  hv_current_watchdog.c.0908B8C6E01F2B93.idx  hv_current_watchdog.h.F18E08F394B8DF0D.idx  inverters_network.c.BBB7E9158429951B.idx  inverters_network.h.5F29E0CB4CFD3271.idx  inverters_utils_c.c.6AF7ADEFB72EB109.idx  inverters_utils_c.h.4E80095D1BC3BCEA.idx  inverters_watchdog.c.7ECA099854266B6E.idx  inverters_watchdog.h.CEB320940C131A6F.idx  ivts_network.c.22B13F1F9D258D4A.idx  ivts_network.h.D98105C91829E356.idx  (+30 more)
docs/: .pages  1. Overview.md  2. Architecture.md  3. Implementation.md  4. Workflow.md
exported/: m_to_csv.m  unpackStruct.m
exported/ARB_ert_rtw/: ARB.c  ARB.h  ARB_data.c  ert_main.c  rtwtypes.h
exported/All0_ert_rtw/: All0.c  All0.h  All0_data.c  ert_main.c  rtwtypes.h
exported/AllControl/: AllControl.c  AllControl.h  ert_main.c  rtwtypes.h
exported/No_ert_rtw/: No.c  No.h  ert_main.c  rtwtypes.h
exported/Regen/: Regen.c  Regen.h  ert_main.c  rtwtypes.h
exported/Simulation_output/Exported_csv/: m3c1_control_input.csv  m3c2_control_input.csv  m3c2_control_output.csv  m3c2_vel_input.csv  m3c2_vel_output.csv  m6c1_control_output.csv  m6c1_vel_output.csv  m6c3_control_output.csv  m6c3_vel_output.csv  m7c1_control_output.csv  m7c1_vel_input.csv  m7c1_vel_output.csv  m7c2_control_output.csv  m7c2_vel_input.csv  m7c2_vel_output.csv  m7c3_control_output.csv  m7c3_vel_input.csv  m7c3_vel_output.csv  m9c1_control_input.csv  m9c1_control_output.csv  m9c1_vel_input.csv  m9c1_vel_output.csv  m9c3_control_input.csv  m9c3_control_output.csv  m9c3_vel_input.csv  m9c3_vel_output.csv
exported/Slip_Control/: SLIP.c  SLIP.h  SlipV1.c  SlipV1.h  SlipV1_data.c  SlipV2.c  SlipV2.h  ert_main.c  rtwtypes.h
exported/Slip_ert_rtw/: Slip.c  Slip.h  Slip_data.c  ert_main.c  rtwtypes.h
exported/Torque_ert_rtw/: Torque.c  Torque.h  Torque_data.c  ert_main.c  rtwtypes.h
exported/Traction_Control/: TV.c  TV.h  Torque.c  Torque.h  Torque_data.c  ert_main.c  rtwtypes.h
exported/Velocity_Estimation/: Velocity_Estimation.c  Velocity_Estimation.h  Velocity_Estimation_data.c  rtwtypes.h
exported/Velocity_Estimation_ert_rtw/: Velocity_Estimation.c  Velocity_Estimation.h  Velocity_Estimation_data.c  ert_main.c  rtwtypes.h
exported/lib/: rtw_continuous.h  rtw_solver.h  solver_zc.h
inc/: benchmark.h  can.h  can_messages.h  data.h  defines.h  main.h  main.hpp  utils.h
src/: benchmark.c  can.c  can_messages.c  main.c  main.cpp  utils.c
